# in_constexpr

./: .clang-format  CMakeLists.txt  InConstexprConfig.cmake.in  README.md  in_constexpr-config.cmake
examples/: CMakeLists.txt  Makefile  factorial.cpp  some_transform.cpp
include/in_constexpr/: if_in_constexpr.hpp  smart_assert.hpp
src/: if_in_constexpr.cpp
